# pandoc-rpc

./: .travis.yml  LICENSE  Main.hs  Setup.hs  pandoc-rpc.cabal  pandoc.proto
.travis/: install-zeromq.sh
Text/Pandoc/: RPC.hs
